--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "^5.1.1",
     "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/bottom-tabs": "^7.8.12",
     "@react-navigation/native": "^7.1.24",
     "@react-navigation/native-stack": "^7.8.5",
     "expo": "~54.0.27",
