Added Verification badge on screens that are showing other users

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 EXPO_PUBLIC_SOCKET_URL=https://qup.dating
 EXPO_PUBLIC_API_URL=https://qup.dating
+
+EXPO_PUBLIC_GOOGLE_ANDROID_KEY=AIzaSyBLK5tZ4qRrposRxz3V6bQVzx77bUbKaIE
+#EXPO_PUBLIC_GOOGLE_ANDROID_KEY=170048399186-1o340jrt5ohcrvcit7qfq7acfhb98k7g.apps.googleusercontent.com
